Add a histogram recording how cache_storage hits kErrorStorage.

R=jsbell@chromium.org, rkaplow@chromium.org

Bug: 886898
Change-Id: I7519c327419c81b5eeb9dd83ac17850114a3795f
Reviewed-on: https://chromium-review.googlesource.com/1234636
Commit-Queue: Ben Kelly <wanderview@chromium.org>
Reviewed-by: Joshua Bell <jsbell@chromium.org>
Reviewed-by: Robert Kaplow (sloooow) <rkaplow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592962}