content/browser/cache_storage/cache_storage_histogram_utils.cc
@@ -1,0 +1,15 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2018 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#include "content/browser/cache_storage/cache_storage_histogram_utils.h"
+
+namespace content {
+
+blink::mojom::CacheStorageError MakeErrorStorage(ErrorStorageType type) {
+  UMA_HISTOGRAM_ENUMERATION("ServiceWorkerCache.ErrorStorageType", type);
+  return blink::mojom::CacheStorageError::kErrorStorage;
+}
+
+}  // namespace content
