content/browser/cache_storage/cache_storage_histogram_utils.h
@@ -3,13 +3,44 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_MACROS_H_
-#define CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_MACROS_H_
+#ifndef CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_UTILS_H_
+#define CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_UTILS_H_
 
 #include "base/metrics/histogram_macros.h"
 #include "content/browser/cache_storage/cache_storage_scheduler_client.h"
+#include "third_party/blink/public/platform/modules/cache_storage/cache_storage.mojom.h"
 
 namespace content {
+
+// This enum gets recorded as a histogram.  Do not renumber the values.
+enum class ErrorStorageType {
+  kDidCreateNullCache = 0,
+  kDeleteCacheFailed = 1,
+  kMatchBackendClosed = 2,
+  kMatchAllBackendClosed = 3,
+  kWriteSideDataBackendClosed = 4,
+  kBatchBackendClosed = 5,
+  kBatchInvalidSpace = 6,
+  kBatchDidGetUsageAndQuotaInvalidSpace = 7,
+  kBatchDidGetUsageAndQuotaUndefinedOp = 8,
+  kKeysBackendClosed = 9,
+  kQueryCacheBackendClosed = 10,
+  kQueryCacheFilterEntryFailed = 11,
+  kQueryCacheDidReadMetadataNullBlobContext = 12,
+  kStorageMatchAllBackendClosed = 13,
+  kWriteSideDataImplBackendClosed = 14,
+  kPutImplBackendClosed = 15,
+  kPutDidDeleteEntryBackendClosed = 16,
+  kMetadataSerializationFailed = 17,
+  kPutDidWriteHeadersWrongBytes = 18,
+  kPutDidWriteBlobToCacheFailed = 19,
+  kDeleteImplBackendClosed = 20,
+  kKeysImplBackendClosed = 21,
+  kCreateBackendDidCreateFailed = 22,
+  kMaxValue = kCreateBackendDidCreateFailed,
+};
+
+blink::mojom::CacheStorageError MakeErrorStorage(ErrorStorageType type);
 
 // Metrics to make it easier to write histograms for several clients.
 #define CACHE_STORAGE_SCHEDULER_UMA_THUNK(uma_type, args) \
@@ -41,4 +72,4 @@ namespace content {
 
 }  // namespace content
 
-#endif  // CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_MACROS_H_
+#endif  // CONTENT_BROWSER_CACHE_STORAGE_CACHE_STORAGE_HISTOGRAM_UTILS_H_
